--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "preset": "react-native"
   },
   "lint-staged": {
-    
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
