--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-navigation": "^1.1.466"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
