--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,11 +94,11 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "com.awesometalks"
+        applicationId "com.alvustinov.awesometalks"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -140,6 +140,7 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-navigation')
 }
 
 // Run this once to be able to run the application with BUCK
