--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.7",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
+    "prop-types": "^15.6.1",
     "react": "16.3.1",
+    "react-apollo": "^2.1.4",
     "react-native": "0.55.4",
     "react-native-navigation": "^1.1.466"
   },
