--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "16.3.1",
     "react-apollo": "^2.1.4",
     "react-native": "0.55.4",
-    "react-native-navigation": "^1.1.466"
+    "react-native-navigation": "^1.1.466",
+    "styled-components": "^3.3.2"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
