--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "prop-types": "^15.6.1",
+    "ramda": "^0.25.0",
     "react": "16.3.1",
     "react-apollo": "^2.1.4",
     "react-native": "0.55.4",
