--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-apollo": "^2.1.4",
     "react-native": "0.55.4",
     "react-native-navigation": "^1.1.466",
+    "react-native-search-bar": "^3.4.2",
     "styled-components": "^3.3.2"
   },
   "devDependencies": {
