--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+    "parser": "babel-eslint",
     "extends": ["standard", "plugin:react/recommended"],
     "rules": {
         "indent": ["error", 4],
