--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "singleQuote": true,
   "tabWidth": 4,
   "useTabs": false,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "arrowParens": "always"
 }
