--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.55.4",
     "react-native-navigation": "^1.1.466",
     "react-native-search-bar": "^3.4.2",
+    "react-native-youtube": "^1.1.0",
     "styled-components": "^3.3.2"
   },
   "devDependencies": {
