added license to package.json

--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "AwesomeTalks",
   "version": "0.0.1",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "precommit": "lint-staged",
     "lint": "eslint index.js src",
     "run-ios": "react-native run-ios",
     "run-android": "react-native run-android",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "watch-test": "jest --watch"
   },
   "dependencies": {
     "apollo-boost": "^0.1.7",
