--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "styled-components": "^3.3.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.5",
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.19.1",
