--- a/ios/AwesomeTalks/Info.plist
+++ b/ios/AwesomeTalks/Info.plist
@@ -24,6 +24,10 @@
 	<string>8</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>twitter</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
